Converted html files

--- a/files/Meeting Materials/2011-06-22-Agenda.md
+++ b/files/Meeting Materials/2011-06-22-Agenda.md
@@ -19,7 +19,7 @@
 
 ## **Agenda**
 
-*   Review [minutes](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-15-Minutes.md) from last week's meeting.
+*   Review [minutes](./files/Meeting%20Materials/2011-06-15-Minutes.md) from last week's meeting.
 *   Status of alias problem.
 *   Report from Eduardo on state of updated docs.
 *   Review suggested changes submitted to date, identifying and focusing on those that do not have consensus.
