--- a/files/Meeting Materials/2011-06-29-Agenda.md
+++ b/files/Meeting Materials/2011-06-29-Agenda.md
@@ -19,7 +19,7 @@
 
 ## **Agenda**
 
-*   Review [minutes](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-22-Minutes.md) from last week's meeting.
+*   Review [minutes](./files/Meeting%20Materials/2011-06-22-Minutes.md) from last week's meeting.
 *   Report from Patrick on state of updated docs.
 *   Review open items:
     *   Clarify _Terms of Use_ for collaboration software used by Expert Groups.
