--- a/files/Meeting Materials/2011-08-17-Agenda.md
+++ b/files/Meeting Materials/2011-08-17-Agenda.md
@@ -28,6 +28,6 @@
     *   33 open issues.  
 
 *   Review of open issues
-    *   See [summary](https://github.com/apastsya/files/jsr348/Meeting%20Materials/OpenIssues-2011-08-17.md)  
+    *   See [summary](./files/Meeting%20Materials/OpenIssues-2011-08-17.md)  
 
 *   Schedule and next steps
