--- a/files/Meeting Materials/2011-08-17-Minutes.md
+++ b/files/Meeting Materials/2011-08-17-Minutes.md
@@ -23,7 +23,7 @@
 *   Public Review status  
 
 *   Review of open issues
-    *   See [summary](https://github.com/apastsya/files/jsr348/Meeting%20Materials/OpenIssues-2011-08-17.md)  
+    *   See [summary](./files/Meeting%20Materials/OpenIssues-2011-08-17.md)  
 
 *   Schedule and next steps
 
@@ -44,7 +44,7 @@ _**Public Review status**_
 
 _**Review of Open Issues**_
 
-We reviewed the [Open Issues](https://github.com/apastsya/files/jsr348/Meeting%20Materials/OpenIssues-2011-08-17.md) list. Patrick will update the list and comment individual issues as necessary. Here are some specific comments on particular issues that came out of our discussion:
+We reviewed the [Open Issues](./files/Meeting%20Materials/OpenIssues-2011-08-17.md) list. Patrick will update the list and comment individual issues as necessary. Here are some specific comments on particular issues that came out of our discussion:
 
 *   [Clarify that the JSPA is sufficient for contributions](http://java.net/jira/browse/JSR348-68)
     *   No "side agreements" should be necessary/required
