--- a/files/Meeting Materials/2011-08-31-Agenda.md
+++ b/files/Meeting Materials/2011-08-31-Agenda.md
@@ -21,8 +21,8 @@
 
 ## **Agenda**
 
-*   Review [Maintenance Release proposal](https://github.com/apastsya/files/jsr348/Working%20documents/Maintenance-AUG-29-2011.md)
-*   Review definition of Member (see [Notes on categories of Membership](https://github.com/apastsya/files/jsr348/Working%20documents/Membership-AUG-31-2011.md))
+*   Review [Maintenance Release proposal](./files/Working%20documents/Maintenance-AUG-29-2011.md)
+*   Review definition of Member (see [Notes on categories of Membership](./files/Working%20documents/Membership-AUG-31-2011.md))
 *   Review other open issues – if time permits
-    *   [Open Issues list](https://github.com/apastsya/files/jsr348/Meeting%20Materials/OpenIssues-2011-08-31.md)
+    *   [Open Issues list](./files/Meeting%20Materials/OpenIssues-2011-08-31.md)
 *   Review schedule and next steps
