--- a/files/Meeting Materials/2011-09-09-Agenda.md
+++ b/files/Meeting Materials/2011-09-09-Agenda.md
@@ -22,7 +22,7 @@
 ## **Agenda**
 
 *   Public Review ballot status
-*   NOTE: the [Maintenance Release proposal](https://github.com/apastsya/files/jsr348/Working%20documents/Maintenance-SEP-07-2011.md) was approved at last week's meeting
-*   Final review of definition of Member (see [Notes on categories of Membership](https://github.com/apastsya/files/jsr348/Working%20documents/Membership-SEP-07-2011.md))
-*   Review other [Open Issues](https://github.com/apastsya/files/jsr348/Meeting%20Materials/OpenIssues-2011-09-09.md)
+*   NOTE: the [Maintenance Release proposal](./files/Working%20documents/Maintenance-SEP-07-2011.md) was approved at last week's meeting
+*   Final review of definition of Member (see [Notes on categories of Membership](./files/Working%20documents/Membership-SEP-07-2011.md))
+*   Review other [Open Issues](./files/Meeting%20Materials/OpenIssues-2011-09-09.md)
 *   Preparation for next week's f2f meeting
