--- a/files/Meeting Materials/2011-09-09-Minutes.md
+++ b/files/Meeting Materials/2011-09-09-Minutes.md
@@ -38,7 +38,7 @@ We reviewed the new Issue Tracking and Maintenance Release language in the updat
 
 _**Categories of Membership**_
 
-We reviewed and approved the latest draft of [Notes on categories of Membership](https://github.com/apastsya/files/jsr348/Working%20documents/Membership-SEP-07-2011.md). Patrick will update the issues with suggested wording.
+We reviewed and approved the latest draft of [Notes on categories of Membership](./files/Working%20documents/Membership-SEP-07-2011.md). Patrick will update the issues with suggested wording.
 
 _**Other open issues**_
 
