--- a/files/Meeting Materials/2011-06-08-Agenda.md
+++ b/files/Meeting Materials/2011-06-08-Agenda.md
@@ -19,8 +19,8 @@
 
 ## **Agenda**
 
-*   Review minutes from [last week](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-01-Minutes.md)'s and [yesterday](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-07-Minutes.md)'s meetings.
-*   Review [Action Items](https://github.com/apastsya/files/jsr348/Working%20documents/AIs.md)
+*   Review minutes from [last week](./files/Meeting%20Materials/2011-06-01-Minutes.md)'s and [yesterday](./files/Meeting%20Materials/2011-06-07-Minutes.md)'s meetings.
+*   Review [Action Items](./files/Working%20documents/AIs.md)
 *   WebEx and/or chat-room?
 *   Status of 'observer' feedback.
 *   Confirm our starting/working documents (listed [here](http://java.net/projects/jsr348/pages/WorkingDocuments))
