--- a/files/Meeting Materials/2011-06-08-Minutes.md
+++ b/files/Meeting Materials/2011-06-08-Minutes.md
@@ -8,8 +8,8 @@
 
 ## **Agenda**
 
-*   Review minutes from [last week](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-01-Minutes.md)'s and [yesterday](https://github.com/apastsya/files/jsr348/Meeting%20Materials/2011-06-07-Minutes.md)'s meetings.
-*   Review [Action Items](https://github.com/apastsya/files/jsr348/Working%20documents/AIs.md).
+*   Review minutes from [last week](./files/Meeting%20Materials/2011-06-01-Minutes.md)'s and [yesterday](./files/Meeting%20Materials/2011-06-07-Minutes.md)'s meetings.
+*   Review [Action Items](./files/Working%20documents/AIs.md).
 *   WebEx and/or chat-room?
 *   Status of 'observer' feedback.
 *   Confirm our starting/working documents (listed [here](http://java.net/projects/jsr348/pages/WorkingDocuments))
@@ -35,7 +35,7 @@ Mike noted that we have very little time to create Early Drafts of the two docs:
 
 Alex suggested: breaking up the documents so that different people can work on them simultaneously.
 
-We updated the [JSR1 list](https://github.com/apastsya/files/jsr348/Working%20documents/JSR1-list-June08.md), assigning a number and an owner to each proposed change. Before the next meeting owners will review their tasks and will email the Experts alias with suggested document changes or additions. For example:
+We updated the [JSR1 list](./files/Working%20documents/JSR1-list-June08.md), assigning a number and an owner to each proposed change. Before the next meeting owners will review their tasks and will email the Experts alias with suggested document changes or additions. For example:
 
 > To: experts@jsr348.java.net  
 > Subject: Suggested change for JSR1 list item 1.3.1 (change logs)  
