Converted html files

--- a/files/Meeting Materials/2011-06-15-Agenda.md
+++ b/files/Meeting Materials/2011-06-15-Agenda.md
@@ -19,7 +19,7 @@
 
 ## **Agenda**
 
-*   Review [minutes](./files/Meeting%20Materials/2011-06-08-Minutes.md) from last week's meeting.
+*   Review [minutes](/files/Meeting%20Materials/2011-06-08-Minutes.md) from last week's meeting.
 *   Review [Action Items](#%20Status%20of%20alias%20problem.).
 *   Status of alias problem.
 *   Review suggested changes submitted to date.
