--- a/files/Meeting Materials/2011-06-15-Minutes.md
+++ b/files/Meeting Materials/2011-06-15-Minutes.md
@@ -25,7 +25,7 @@
 
 ## **Agenda**
 
-*   Review [minutes](./files/Meeting%20Materials/2011-06-08-Minutes.md) from last week's meeting.
+*   Review [minutes](/files/Meeting%20Materials/2011-06-08-Minutes.md) from last week's meeting.
 *   Review [Action Items](http://java.net/projects/jsr348/downloads/download/Working%20documents/AIs.md).
 *   Status of alias problem.
 *   Review suggested changes submitted to date.
