--- a/files/Meeting Materials/2011-09-21-Agenda.md
+++ b/files/Meeting Materials/2011-09-21-Agenda.md
@@ -25,7 +25,7 @@
 *   Review issues resolved since then
 *   Review remaining open issues
     *   Sean Sheedy's last-minute issues
-*   End-game plan (see [schedule](./files/Working%20documents/Schedule.md))
+*   End-game plan (see [schedule](/files/Working%20documents/Schedule.md))
     *   September 28 meeting
     *   Submit Final Draft to PMO
 
