--- a/files/Meeting Materials/2011-06-22-Minutes.md
+++ b/files/Meeting Materials/2011-06-22-Minutes.md
@@ -18,7 +18,7 @@
 
 ## **Agenda**
 
-*   Review [minutes](./files/Meeting%20Materials/2011-06-15-Minutes.md) from last week's meeting.
+*   Review [minutes](/files/Meeting%20Materials/2011-06-15-Minutes.md) from last week's meeting.
 *   Status of alias problem.
 *   Report from Eduardo on state of updated docs.
 *   Review suggested changes submitted to date, identifying and focusing on those that do not have consensus.
@@ -32,7 +32,7 @@
 
 ### Review minutes from last week's meeting
 
-Last week's [minutes](./files/Meeting%20Materials/2011-06-15-Minutes.md) were approved.
+Last week's [minutes](/files/Meeting%20Materials/2011-06-15-Minutes.md) were approved.
 
 ### Status of the alias problem
 
