--- a/files/Meeting Materials/2011-08-31-Minutes.md
+++ b/files/Meeting Materials/2011-08-31-Minutes.md
@@ -22,10 +22,10 @@
 
 ## **Agenda**
 
-*   Review [Maintenance Release proposal](./files/Working%20documents/Maintenance-AUG-29-2011.md)
-*   Review definition of Member (see [Notes on categories of Membership](./files/Working%20documents/Membership-AUG-31-2011.md))
+*   Review [Maintenance Release proposal](/files/Working%20documents/Maintenance-AUG-29-2011.md)
+*   Review definition of Member (see [Notes on categories of Membership](/files/Working%20documents/Membership-AUG-31-2011.md))
 *   Review other open issues – if time permits
-    *   [Open Issues list](./files/Meeting%20Materials/OpenIssues-2011-08-31.md)
+    *   [Open Issues list](/files/Meeting%20Materials/OpenIssues-2011-08-31.md)
 *   Review schedule and next steps
 
 ## Minutes
